--- a/mooc_exp/style/style-1.css
+++ b/mooc_exp/style/style-1.css
@@ -15,6 +15,13 @@ h1{
 	width: 700px;
 	height: 400px;
 }
+#chart-type{
+  padding-left: 100px;
+}
+
+#img-chart-type{
+  padding-left: 100px;
+}
 #logout{
 	color:red;
 }
